# game-engine

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac  cppPlugins  test.xml
Plugins/ExtensionLoader/: ExtensionLoader.plg  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac
Plugins/ExtensionLoader/autom4te.cache/: output.0  traces.0  traces.1  traces.2  traces.3
Plugins/ExtensionLoader/src/: ExtensionLoader.cpp  ExtensionLoader.hpp  ExtensionLoaderProxy.cpp
Plugins/ExtensionLoader/src/.deps/: ExtensionLoader.Po
Plugins/JsonConfigurationFileManager/: Makefile.am  Makefile.in  configure  configure.ac
Plugins/JsonConfigurationFileManager/src/: JsonConfiguration.cpp  JsonConfiguration.hpp  JsonConfigurationFileManager.cpp  JsonConfigurationFileManager.hpp
Plugins/Logger/: ExtensionLoader.plg  Makefile.am  Makefile.in  configure  configure.ac
Plugins/Logger/src/: Dbg.hpp  Logger.cpp  Logger.hpp
Plugins/LuaScriptingPlugin/: Makefile.am  Makefile.in  configure  configure.ac
Plugins/LuaScriptingPlugin/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
Plugins/LuaScriptingPlugin/script/: plugin.lua
Plugins/LuaScriptingPlugin/src/: LuaScriptingPlugin.cpp  LuaScriptingPlugin.hpp
Plugins/OpenGL/: JsonConfigurationFile.plg  JsonConfigurationFileManager.plg  Logger.plg  Makefile.am  Makefile.in  Manifest.MF  configure  configure.ac
Plugins/OpenGL/src/: OpenGL.cpp  OpenGL.hpp
Plugins/OpenGLModelManager/: Makefile.am  Makefile.in  Manifest.MF  config.h.in  configure  configure.ac
Plugins/OpenGLModelManager/src/: Mesh.cpp  Mesh.hpp  OpenGLModelManager.cpp  OpenGLModelManager.hpp
Plugins/OpenGLScene/: Makefile.am  Makefile.in  Manifest.MF  configure  configure.ac
Plugins/OpenGLScene/src/: OpenGLScene.cpp  OpenGLScene.hpp
Plugins/TestPlugin/: Makefile  Makefile.am  Makefile.in  TestPlugin.plg  config.status  configure  configure.ac
Plugins/TestPlugin/autom4te.cache/: output.0  output.2  traces.0  traces.1  traces.2
Plugins/TestPlugin/src/: TestPlugin.cpp  TestPlugin.hpp
Plugins/TestPlugin/src/.deps/: ProjectManagerPlugin.Po  TestPlugin.Po
Plugins/TextureRegistrar/: Makefile.am  Makefile.in  configure  configure.ac
Plugins/TextureRegistrar/src/: ImageLoader.cpp  ImageLoader.hpp  TextureRegistrar.cpp  TextureRegistrar.hpp
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
data/: tower.mtl
data/config/: opengl.json
src/api/: CommunicativeObject.cpp  CommunicativeObject.hpp  Plugin.cpp  Plugin.hpp  PluginManager.hpp  StringUtils.cpp
src/api/Interfaces/: ILogger.hpp  IOpenGL.hpp  ITestPlugin.hpp
src/api/Interfaces/Configuration/: IConfiguration.hpp  IConfigurationManager.hpp
src/api/Interfaces/OpenGL/: IOpenGL.hpp  IOpenGLModelManager.hpp  IOpenGLScene.hpp  ITextureRegistrar.hpp
src/api/utility/: Terminal_colors.hpp
src/core/: Application.cpp  Application.hpp  ConcretePluginManager.cpp  ConcretePluginManager.hpp  main.cpp
src/core/.deps/: AnimationManager.Po  Application.Po  ConcretePluginManager.Po  ProjectManager.Po  PropertyManager.Po
src/utility/: StringUtils.cpp  StringUtils.hpp
tools/PluginInterfaceCompiler/: Makefile  Makefile.am  PluginInterfaceCompiler  README  config.h  config.h.in  config.status  configure  configure.ac  list.txt
tools/PluginInterfaceCompiler/Plugins/InputManifestFile/: InputManifestFile.plg  Makefile  Makefile.am  config.status  configure  configure.ac
tools/PluginInterfaceCompiler/Plugins/InputManifestFile/autom4te.cache/: output.1  traces.0  traces.1
tools/PluginInterfaceCompiler/Plugins/InputManifestFile/src/: InputManifestFile.cpp  InputManifestFile.hpp  ManifestParser.cpp  ManifestParser.hpp
tools/PluginInterfaceCompiler/Plugins/OutputApiHeader/: InputManifestFile.plg  Makefile  Makefile.am  OutputApiHeader.plg  config.status  configure  configure.ac
tools/PluginInterfaceCompiler/Plugins/OutputApiHeader/autom4te.cache/: output.0  output.3  traces.0  traces.1
tools/PluginInterfaceCompiler/Plugins/OutputApiHeader/src/: OutputApiHeader.cpp  OutputApiHeader.hpp
tools/PluginInterfaceCompiler/Plugins/OutputApiHeader/src/.deps/: InputManifestFile.Tpo
tools/PluginInterfaceCompiler/autom4te.cache/: output.0  requests  traces.0  traces.1
tools/PluginInterfaceCompiler/src/api/: IApplication.hpp  Plugin.hpp  PluginManager.hpp  StringUtils.hpp
tools/PluginInterfaceCompiler/src/api/Interfaces/Plugins/: IOutputPlugin.hpp  IParserPlugin.hpp
tools/PluginInterfaceCompiler/src/api/utility/: FileUtils.hpp  StringCase.hpp
tools/PluginInterfaceCompiler/src/core/: Application.cpp  Application.hpp  ConcretePluginManager.cpp  ConcretePluginManager.hpp
tools/PluginInterfaceCompiler/test/Plugins/TestPlugin/: Manifest.MF
